Working on css improvements

--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,19 +1,19 @@
 <!-- jQuery Version 1.11.0 -->
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script async src="{{ '/assets/js/bootstrap.min.js' }}"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script async src="{{ '/assets/js/jquery.easing.min.js' }}"></script>
-<script async src="{{ '/assets/js/classie.js' }}"></script>
-<script async src="{{ '/assets/js/cbpAnimatedHeader.js' }}"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script type="text/javascript" src="{{ '/assets/js/classie.js' }}"></script>
+<script type="text/javascript" src="{{ '/assets/js/cbpAnimatedHeader.js' }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script async src="{{ '/assets/js/freelancer.js' }}"></script>
+<script type="text/javascript" src="{{ '/assets/js/freelancer.js' }}"></script>
 
 <!-- Languaje List JavaScript -->
-<script async src="{{ '/assets/js/languages.js' }}"></script>
+<script type="text/javascript" src="{{ '/assets/js/languages.js' }}"></script>
 
 <!-- Google Analytics -->
-<script async src="{{ '/assets/js/analytics.js' }}"></script>
+<script type="text/javascript" src="{{ '/assets/js/analytics.js' }}"></script>
