--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#page-top">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{site.url}}#headers">{{ site.title }}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,28 +17,14 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li class="hidden">
-          <a href="#page-top"></a>
+          <a href="{{site.url}}#headers"></a>
         </li>
 
+        {% for link in site.nav-links %}
         <li class="page-scroll">
-          <a href="#about">About</a>
+          <a href="{{site.url}}{{link.path}}">{{link.title}}</a>
         </li>
-
-        <li class="page-scroll">
-          <a href="#work">Work</a>
-        </li>
-
-        <li class="page-scroll">
-          <a href="#education">Education</a>
-        </li>
-
-        <li class="page-scroll">
-          <a href="#portfolio">Portfolio</a>
-        </li>
-
-        <li class="page-scroll">
-          <a href="#languages">Languages</a>
-        </li>
+        {% endfor %}
 
       </ul>
     </div>
