--- a/_includes/js.html
+++ b/_includes/js.html
@@ -5,15 +5,15 @@
 <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script type="text/javascript" src="{{ '/assets/js/classie.js' }}"></script>
-<script type="text/javascript" src="{{ '/assets/js/cbpAnimatedHeader.js' }}"></script>
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script type="text/javascript" async src="{{ '/assets/js/classie.js' }}"></script>
+<script type="text/javascript" async src="{{ '/assets/js/cbpAnimatedHeader.js' }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script type="text/javascript" src="{{ '/assets/js/freelancer.js' }}"></script>
+<script type="text/javascript" async src="{{ '/assets/js/freelancer.js' }}"></script>
 
 <!-- Languaje List JavaScript -->
-<script type="text/javascript" src="{{ '/assets/js/languages.js' }}"></script>
+<script type="text/javascript" async src="{{ '/assets/js/languages.js' }}"></script>
 
 <!-- Google Analytics -->
-<script type="text/javascript" src="{{ '/assets/js/analytics.js' }}"></script>
+<script type="text/javascript" async src="{{ '/assets/js/analytics.js' }}"></script>
