--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -4,7 +4,7 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 body {
-  font-family: Roboto;
+  font-family: 'Roboto-Regular';
 }
 
 .container {
