Flattened some _config.yml fields

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
         <hr class="star-primary">
       </div>
       <div class="col-lg-12 about-description">
-        {{ site.about.description }}
+        {{ site.description }}
       </div>
       
       <div class="col-lg-12 text-center" >
