--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,4 +1,4 @@
-{% if site.about.education %}
+{% if site.education %}
 <!-- Education Section -->
 <section id="education">
   <div class="container">
@@ -8,7 +8,7 @@
         <hr class="star-primary">
       </div>
       <div class="col-lg-12">
-        {% for edu in site.about.education %}
+        {% for edu in site.education %}
         <div class="about-section">
           <div class="row">
             <div class="col-md-2 col-sm-3 col-xs-12">
