--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,4 +1,4 @@
-{% if site.about.work %}
+{% if site.work %}
 <!-- Work Section -->
 <section id="work">
   <div class="container">
@@ -8,7 +8,7 @@
         <hr class="star-primary">
       </div>
       <div class="col-lg-12">
-        {% for work in site.about.work %}
+        {% for work in site.work %}
         <div class="about-section">
           <div class="row">
             <div class="col-md-2 col-sm-3 col-xs-12">
