--- a/_includes/education.html
+++ b/_includes/education.html
@@ -11,16 +11,16 @@
         {% for edu in site.education %}
         <div class="about-section">
           <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-12">
+            <div class="col-sm-3 col-xs-12">
               <p>{{ edu.time }}</p>
             </div>
-            <div class="col-md-10 col-sm-9  col-sm-offset-0 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ edu.degree }}</strong></p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-10 col-md-offset-2 col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
               <p>{{ edu.school}}</p>
             </div>
           </div>
