--- a/_includes/work.html
+++ b/_includes/work.html
@@ -11,16 +11,16 @@
         {% for work in site.work %}
         <div class="about-section">
           <div class="row">
-            <div class="col-md-2 col-sm-3 col-xs-12">
+            <div class="col-sm-3 col-xs-12">
               <p>{{ work.time }}</p>
             </div>
-            <div class="col-md-10 col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ work.title }}</strong></p>
             </div>
           </div>
 
           <div class="row">
-            <div class="col-md-10 col-md-offset-2 col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
               <p>{{ work.company-name}}</p>
             </div>
           </div>
