--- a/_includes/css/footer.css
+++ b/_includes/css/footer.css
@@ -18,5 +18,5 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #{{ site.color.secondary-dark }};
+    background-color: #{{ site.color.secondary_dark }};
 }
