--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,13 +10,13 @@
         {{ site.description }}
       </div>
       <div class="col-lg-12 text-center" >
-        {% if site.curriculum-vitae-link %}
-        <a target="_blank" href="{{ site.curriculum-vitae-link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
+        {% if site.curriculum_vitae_link %}
+        <a target="_blank" href="{{ site.curriculum_vitae_link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
           <i class="fa fa-graduation-cap"></i> Curriculum Vitae
         </a>
         {% endif %}
-        {% if site.cover-letter-link %}
-        <a target="_blank" href="{{ site.cover-letter-link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
+        {% if site.cover_letter_link %}
+        <a target="_blank" href="{{ site.cover_letter_link }}" class="btn btn-lg btn-outline-content" style="width: 250px;">
           <i class="fa fa-envelope-open"></i> Cover Letter
         </a>
         {% endif %}
