--- a/_includes/work.html
+++ b/_includes/work.html
@@ -21,7 +21,7 @@
 
           <div class="row">
             <div class="col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
-              <p>{{ work.company-name}}</p>
+              <p>{{ work.company_name}}</p>
             </div>
           </div>
         </div>
