--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             {% for network in site.social %}
             <li>
               <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i
-                  class="fa fa-fw fa-{{ network.title }}"></i></a>
+                  class="fab fa-{{ network.title }}"></i></a>
             </li>
             {% endfor %}
           </ul>
