Improved icons for social networks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,9 @@
           <ul class="list-inline">
             {% for network in site.social %}
             <li>
-              <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline"><i
-                  class="fab fa-{{ network.title }}"></i></a>
+              <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline">
+                <i class="{{ network.icon }}" title="{{ network.title }}"></i>
+              </a>
             </li>
             {% endfor %}
           </ul>
