--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
   {% endif %}
 
   <!-- Custom Fonts -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
   <script src="https://kit.fontawesome.com/5f6010e7c7.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
