--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
 
   <!-- Custom Fonts -->
   <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-  <script src="https://kit.fontawesome.com/5f6010e7c7.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
 </head>
