--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
-<header id="headers">
-  <div class="container">
+<header id="headers" class="outer-center">
+  <div class="container inner-center">
     <div class="row">
       <div class="col-lg-12">
         <div class="img-profile img-responsive img-centered img-circle">
