* Applied minor improvements related with page description.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
         </div>
         <div class="footer-col col-sm-6 credits">
           <h3>{{ site.footer.credits }}</h3>
-          <p>{{ site.credits }}</p>
+          <p>{{ site.skills }}</p>
         </div>
       </div>
     </div>
