--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Website</title>
   <meta name="viewport" content="width=device-width">
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ site.summary }}">
   {% if site.meta_author %}
   <meta name="author" content="{{ site.meta_author }}">
   {% endif %}
