--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include about.html %}
     {% include work.html %}
     {% include education.html %}
-    {% include portfolio-grid.html %}
+    {% include projects-grid.html %}
     {% include footer.html %}
     {% include social-profile.html %}
     {% include js.html %}
