--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -4,6 +4,6 @@
 {% include css/footer.css %}
 {% include css/header.css %}
 {% include css/navbar.css %}
-{% include css/portfolio.css %}
+{% include css/projects.css %}
 {% include css/section.css %}
 {% include css/circle.css %}
