--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -15,7 +15,7 @@ body {
     margin: 0 0 30px 0;
 }
 
-.portfolio-item .square {
+.project-item .square {
     float:left;
     position: relative;
     width: 100%;
@@ -27,7 +27,7 @@ body {
     background-size: cover;
 }
 
-.portfolio-item .content {
+.project-item .content {
     position:absolute;
 }
 
@@ -40,7 +40,7 @@ p {
 }
 
 p.small {
-    font-size: 16px;
+    font-size: 10pt;
 }
 
 a,
