--- a/_includes/education.html
+++ b/_includes/education.html
@@ -12,16 +12,22 @@
         <div class="about-section">
           <div class="row">
             <div class="col-sm-3 col-xs-12">
+              {% if edu.time %}
               <p>{{ edu.time }}</p>
+              {% endif %}
             </div>
-            <div class="col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-4 col-sm-push-5 col-sm-offset-0 col-xs-11 col-xs-offset-1">
+              {% if edu.school_name %}
+              <p><strong>{{ edu.school_name }}</strong></p>
+              {% endif %}
+            </div>
+            <div class="col-sm-5 col-sm-pull-4 col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ edu.degree }}</strong></p>
             </div>
           </div>
-
           <div class="row">
             <div class="col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
-              <p>{{ edu.school}}</p>
+              <p class="small">{{ edu.level}}</p>
             </div>
           </div>
         </div>
