--- a/_includes/projects-grid.html
+++ b/_includes/projects-grid.html
@@ -1,18 +1,18 @@
-<!-- Portfolio Grid Section -->
-<section id="portfolio">
+<!-- Project Grid Section -->
+<section id="projects">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Portfolio</h2>
+        <h2>Projects</h2>
         <hr class="star-primary">
       </div>
     </div>
 
     <div class="row">
-      {% for post in site.categories.portfolio %}
-      <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item">
-        <a target="_blank" href="{{ post.client-link }}" class="portfolio-link">
-          <div class="square" style="background-image: url('/assets/img/portfolio/{{post.img}}');">
+      {% for post in site.categories.projects %}
+      <div class="col-xs-6 col-sm-4 col-md-3 project-item">
+        <a target="_blank" href="{{ post.client-link }}" class="project-link">
+          <div class="square" style="background-image: url('/assets/img/projects/{{post.img}}');">
             <div class="caption">
               <div class="caption-content">
                 <i class="fa fa-search-plus fa-2x"></i>
