--- a/_includes/work.html
+++ b/_includes/work.html
@@ -12,16 +12,22 @@
         <div class="about-section">
           <div class="row">
             <div class="col-sm-3 col-xs-12">
+              {% if work.time %}
               <p>{{ work.time }}</p>
+              {% endif %}
             </div>
-            <div class="col-sm-9 col-sm-offset-0 col-xs-11 col-xs-offset-1">
+            <div class="col-sm-4 col-sm-push-5 col-sm-offset-0 col-xs-11 col-xs-offset-1">
+              {% if work.company_name %}
+              <p><strong>{{ work.company_name }}</strong></p>
+              {% endif %}
+            </div>
+            <div class="col-sm-5 col-sm-pull-4 col-sm-offset-0 col-xs-11 col-xs-offset-1">
               <p><strong>{{ work.title }}</strong></p>
             </div>
           </div>
-
           <div class="row">
             <div class="col-sm-9 col-sm-offset-3 col-xs-11 col-xs-offset-1">
-              <p>{{ work.company_name}}</p>
+              <p class="small">{{ work.duration}}</p>
             </div>
           </div>
         </div>
