--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,169 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
+  <head>
+    <meta charset="utf-8">
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Website</title>
+    
+    <meta name="viewport" content="width=device-width">
+    
+    <meta name="description" content="{{ site.summary }}">
+    
+    {% if site.meta_author %}
+    <meta name="author" content="{{ site.meta_author }}">
+    {% endif %}
+
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
+
+    <!-- Google verification -->
+    {% if site.google_verify %}
+    <meta name="google-site-verification" content="{{ site.google_verify }}">
+    {% endif %}
+
+    <!-- Bing Verification -->
+    {% if site.bing_verify %}
+    <meta name="msvalidate.01" content="{{ site.bing_verify }}">
+    {% endif %}
+
+    <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <link 
+      rel="stylesheet" 
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    >
+    <link 
+      rel="stylesheet" 
+      href="{{ '/style.css' }}"
+    >
+
+    <!-- Custom Fonts -->
+    <link 
+      rel="stylesheet" 
+      href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css"
+    >
+    <link 
+      rel="stylesheet" 
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+    >
+    <link 
+      rel="stylesheet" 
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    >
+
+  </head>
+
   <body id="page-top" class="index">
-    {% include nav.html %}
-    {% include header.html %}
-    {% include about.html %}
-    {% include work.html %}
-    {% include education.html %}
-    {% include projects-grid.html %}
-    {% include footer.html %}
-    {% include social-profile.html %}
-    {% include js.html %}
+    <header id="headers" class="outer-center-container">
+      <div class="container inner-center-container">
+        <div class="img-profile img-responsive img-centered img-circle">
+        </div>
+        <div class="intro-text">
+          <span class="name">{{ site.title }}</span>
+          <hr class="star-light">
+          <span class="skills">{{ site.skills }}</span>
+          <ul class="list-inline">
+            {% for network in site.social %}
+            <li>
+              <a target="_blank" href="{{ network.url }}" class="btn-social btn-outline">
+                <i class="{{ network.icon }}" title="{{ network.title }}"></i>
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+          <div class="col-lg-6 col-lg-offset-3 text-justify">
+            <p>
+            {{ site.description }}
+            </p>
+          </div>
+          <div class="col-lg-12 text-center">
+            <a 
+              target="_blank" 
+              href="mailto:{{ site.email }}" 
+              class="btn btn-lg btn-outline"
+              style="width: 250px;"
+            >
+              <i class="fa fa-envelope"></i> Contact me
+            </a>
+            {% if site.curriculum_vitae_link %}
+            <a
+              target="_blank" 
+              href="{{ site.curriculum_vitae_link }}"
+              class="btn btn-lg btn-outline" 
+              style="width: 250px;"
+            >
+              <i class="fa fa-graduation-cap"></i> Curriculum Vitae
+            </a>
+            {% endif %}
+            {% if site.cover_letter_link %}
+            <a 
+              target="_blank" 
+              href="{{ site.cover_letter_link }}" 
+              class="btn btn-lg btn-outline" 
+              style="width: 250px;"
+            >
+              <i class="fa fa-envelope-open"></i> Cover Letter
+            </a>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- jQuery Version 1.11.0 -->
+    <script
+      type="text/javascript" 
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+    />
+
+    <!-- Bootstrap Core JavaScript -->
+    <script 
+      type="text/javascript" 
+      src="https://stackpath.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
+    />
+
+    <!-- Plugin JavaScript -->
+    <script 
+      type="text/javascript" 
+      async 
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"
+    />
+
+    <!-- Google Analytics -->
+    <script type="text/javascript" async src="{{ '/assets/js/analytics.js' }}"></script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Person",
+      "name": "Sergio García Prado",
+      "email": "mailto:sergio@garciparedes.me",
+      "image": "https://garciparedes.me/assets/img/profile.jpg",
+      "jobTitle": "Software Engineering | Statistics | RPA | Combinatorial Optimization",
+      "birthDate": "1994.08.11",
+      "gender": "male",
+      "nationality": "Spanish",
+      "birthPlace" : {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+            "addressLocality": "Paredes de Nava",
+            "addressRegion": "Palencia",
+            "addressCountry": "Spain"
+        }
+      },
+      "url": "http://garciparedes.me",
+      "sameAs": [
+        "http://www.facebook.com/garciparedes",
+        "http://instagram.com/garciparedes",
+        "http://www.linkedin.com/in/garciparedes",
+        "https://github.com/garciparedes",
+        "https://www.hackerrank.com/garciparedes",
+        "https://leetcode.com/garciparedes",
+        "https://scholar.google.com/citations?user=X3Mb7BAAAAAJ",
+        "https://stackoverflow.com/users/3921457",
+        "http://plus.google.com/+SergioGarcía-garciparedes"
+      ]
+    }
+    </script>
   </body>
 </html>
