* Improve responsiveness on big screens.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,8 +71,8 @@
             </li>
             {% endfor %}
           </ul>
-          <div class="col-lg-6 col-lg-offset-3 text-justify">
-            <p>
+          <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3 col-xl-4 col-xl-offset-4">
+            <p class="text-justify">
             {{ site.description }}
             </p>
           </div>
