--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@
     />
 
     <!-- Google Analytics -->
-    <script type="text/javascript" async src="{{ '/assets/js/analytics.js' }}"></script>
+    <script type="text/javascript" src="{{ '/assets/js/analytics.js' }}"></script>
 
     <script type="application/ld+json">
     {
