--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     
@@ -110,17 +110,11 @@
       </div>
     </header>
     
-    <script 
-      type="text/javascript" 
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    />
-    <script 
-      type="text/javascript" 
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 
     <!-- Google Analytics -->
-    <script type="text/javascript" src="{{ '/assets/js/analytics.js' }}"></script>
+    <script src="{{ '/assets/js/analytics.js' }}"></script>
 
     <script type="application/ld+json">
     {
