--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -114,7 +114,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Google Analytics -->
-    <script src="{{ '/assets/js/analytics.js' }}"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-32504770-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-32504770-2');
+    </script>
 
     <script type="application/ld+json">
     {
