* Update "json-ld".

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,27 +129,15 @@
       "name": "Sergio García Prado",
       "email": "mailto:sergio@garciparedes.me",
       "image": "https://garciparedes.me/assets/img/profile.jpg",
-      "jobTitle": "Software Engineering | Statistics | RPA | Combinatorial Optimization",
+      "jobTitle": "Software Engineering | Statistics",
+      "alumniOf": "Valladolid University",
       "birthDate": "1994.08.11",
       "gender": "male",
       "nationality": "Spanish",
-      "birthPlace" : {
-        "@type": "Place",
-        "address": {
-          "@type": "PostalAddress",
-            "addressLocality": "Paredes de Nava",
-            "addressRegion": "Palencia",
-            "addressCountry": "Spain"
-        }
-      },
       "url": "http://garciparedes.me",
       "sameAs": [
-        "http://www.facebook.com/garciparedes",
-        "http://instagram.com/garciparedes",
         "http://www.linkedin.com/in/garciparedes",
         "https://github.com/garciparedes",
-        "https://www.hackerrank.com/garciparedes",
-        "https://leetcode.com/garciparedes",
         "https://scholar.google.com/citations?user=X3Mb7BAAAAAJ",
         "https://stackoverflow.com/users/3921457",
         "http://plus.google.com/+SergioGarcía-garciparedes"
